--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
             <div class="footer-social">
                 <h3>Follow us</h3>
                 <div class="social-icons">
-                    <a href="#"><img src="assets/img/facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="assets/img/instagram.png" alt="Instagram"></a>
-                    <a href="#"><img src="assets/img/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="./Assets/img/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="./Assets/img/instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="./Assets/img/twitter.png" alt="Twitter"></a>
                 </div>
             </div>
         </div>
