--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="item-card">
                 <img src="/Assets/img/burguer.png" alt="Burguer">
-                <h3>Soft Drink</h3>
+                <h3>Hamburguer</h3>
                 <p>$15.99</p>
                 <button class="favorite-btn">♡ Favorite</button>
             </div>
